--- a/publickey.html
+++ b/publickey.html
@@ -18,7 +18,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
-                <h3 class="float-md-start mb-0"><a href="./index.html">Eren Doğan</a></h3>
+                <h3 class="float-md-start mb-0"><a href="./index.html">Eren Dogan</a></h3>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                     <a class="nav-link" href="./index.html">Home</a>
                     <a class="nav-link" aria-current="page" href="./aboutme.html">About Me</a>
