--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,7 @@
                     <a class="nav-link" href="./aboutme.html">About Me</a>
                     <a class="nav-link" href="./assets/Eren-Dogan-Resume.pdf" target="_blank">Resume</a>
                     <a class="nav-link active" href="./projects.html">Projects</a>
+                    <a class="nav-link" href="./publications.html">Publications</a>
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </nav>
             </div>
@@ -34,7 +35,7 @@
             </br>
             <div class="border-bottom pb-5">
                 <a href="https://biarmic.github.io/pathfinder-js/" target="_blank">
-                    <img src="./assets/images/pathfinderjs.gif" class="rounded-3 img-fluid project-image" alt="PathfinderJS">
+                    <img src="./assets/images/projects/pathfinderjs.gif" class="rounded-3 img-fluid project-image" alt="PathfinderJS">
                 </a>
             </div>
             </br>
@@ -42,7 +43,7 @@
             </br>
             <div class="border-bottom pb-5">
                 <a href="https://biarmic.github.io/image-processor-js/" target="_blank">
-                    <img src="./assets/images/imageprocessorjs.gif" class="rounded-3 img-fluid project-image" alt="ImageProcessorJS">
+                    <img src="./assets/images/projects/imageprocessorjs.gif" class="rounded-3 img-fluid project-image" alt="ImageProcessorJS">
                 </a>
             </div>
             </br>
@@ -50,7 +51,7 @@
             </br>
             <div class="border-bottom pb-5">
                 <a href="https://biarmic.github.io/solitaire-js/" target="_blank">
-                    <img src="./assets/images/solitairejs.gif" class="rounded-3 img-fluid project-image" alt="SolitaireJS">
+                    <img src="./assets/images/projects/solitairejs.gif" class="rounded-3 img-fluid project-image" alt="SolitaireJS">
                 </a>
             </div>
             </br>
@@ -58,7 +59,7 @@
             </br>
             <div>
                 <a href="https://biarmic.github.io/outrun-js/" target="_blank">
-                    <img src="./assets/images/outrunjs.gif" class="rounded-3 img-fluid project-image" alt="OutRunJS">
+                    <img src="./assets/images/projects/outrunjs.gif" class="rounded-3 img-fluid project-image" alt="OutRunJS">
                 </a>
             </div>
             </br>
