--- a/aboutme.html
+++ b/aboutme.html
@@ -24,6 +24,7 @@
                     <a class="nav-link active" aria-current="page" href="./aboutme.html">About Me</a>
                     <a class="nav-link" href="./assets/Eren-Dogan-Resume.pdf" target="_blank">Resume</a>
                     <a class="nav-link" href="./projects.html">Projects</a>
+                    <a class="nav-link" href="./publications.html">Publications</a>
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </nav>
             </div>
