--- a/publications.html
+++ b/publications.html
@@ -13,32 +13,30 @@
     <script src="scripts/index.js"></script>
 </head>
 
-<body class="d-flex h-100 text-center text-white" onload="animation()">
+<body class="d-flex h-100 text-center text-white">
 
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
                 <h3 class="float-md-start mb-0"><a href="./index.html">Eren Dogan</a></h3>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     <a class="nav-link" href="./aboutme.html">About Me</a>
                     <a class="nav-link" href="./assets/Eren-Dogan-Resume.pdf" target="_blank">Resume</a>
                     <a class="nav-link" href="./projects.html">Projects</a>
-                    <a class="nav-link" href="./publications.html">Publications</a>
+                    <a class="nav-link active" href="./publications.html">Publications</a>
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </nav>
             </div>
         </header>
 
         <main class="px-3 mb-auto">
-            <h1>👋🏻</h1>
+            <div>
+                <a href="https://arxiv.org/abs/2103.15972" target="_blank">
+                    <img src="./assets/images/publications/pytorch-compression.png" class="rounded-3 img-fluid project-image" alt="PyTorchCompression">
+                </a>
+            </div>
             </br>
-            </br>
-            <h1 id="greetings"></h1>
-            </br>
-            </br>
-            <p class="lead">My name is Eren</p>
-            <p class="lead">I'm a junior CS student</p>
         </main>
     </div>
 
