Target links are blank

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                     <a class="nav-link" href="./index.html">Home</a>
                     <a class="nav-link" aria-current="page" href="./aboutme.html">About Me</a>
-                    <a class="nav-link" href="./assets/Eren-Dogan-Resume.pdf" target="_blank">Resume</a>
+                    <a class="nav-link" href="./assets/Eren-Dogan-Resume.pdf" target="blank">Resume</a>
                     <a class="nav-link" href="./projects.html">Projects</a>
                     <a class="nav-link" href="./publications.html">Publications</a>
                     <a class="nav-link active" href="./contact.html">Contact</a>
@@ -33,22 +33,22 @@
         <main class="px-3 mb-auto">
             <div class="row">
                 <div class="col">
-                    <a href="https://github.com/biarmic" target="_blank">
+                    <a href="https://github.com/biarmic" target="blank">
                         <img src="./assets/icons/github.svg" alt="GitHub" class="social-link">
                     </a>
                 </div>
                 <div class="col">
-                    <a href="https://www.linkedin.com/in/erendogann/" target="_blank">
+                    <a href="https://www.linkedin.com/in/erendogann/" target="blank">
                         <img src="./assets/icons/linkedin.svg" alt="LinkedIn" class="social-link">
                     </a>
                 </div>
                 <div class="col">
-                    <a href="https://twitter.com/biarmic/" target="_blank">
+                    <a href="https://twitter.com/biarmic/" target="blank">
                         <img src="./assets/icons/twitter.svg" alt="Twitter" class="social-link">
                     </a>
                 </div>
                 <div class="col">
-                    <a href="mailto: eren.dogan@ozu.edu.tr" target="_blank">
+                    <a href="mailto: eren.dogan@ozu.edu.tr" target="blank">
                         <img src="./assets/icons/mail.svg" alt="Email" class="social-link">
                     </a>
                 </div>
