--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                     <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     <a class="nav-link" href="./aboutme.html">About Me</a>
-                    <a class="nav-link" href="./assets/Eren-Dogan-Resume.pdf" target="_blank">Resume</a>
+                    <a class="nav-link" href="./assets/Eren-Dogan-Resume.pdf" target="blank">Resume</a>
                     <a class="nav-link active" href="./projects.html">Projects</a>
                     <a class="nav-link" href="./publications.html">Publications</a>
                     <a class="nav-link" href="./contact.html">Contact</a>
@@ -31,34 +31,34 @@
         </header>
 
         <main class="px-3 mb-auto">
-            <h1><a href="https://biarmic.github.io/pathfinder-js/" target="_blank">PathfinderJS</a></h1>
+            <h1><a href="https://biarmic.github.io/pathfinder-js/" target="blank">PathfinderJS</a></h1>
             </br>
             <div class="border-bottom pb-5">
-                <a href="https://biarmic.github.io/pathfinder-js/" target="_blank">
+                <a href="https://biarmic.github.io/pathfinder-js/" target="blank">
                     <img src="./assets/images/projects/pathfinderjs.gif" class="rounded-3 img-fluid project-image" alt="PathfinderJS">
                 </a>
             </div>
             </br>
-            <h1><a href="https://biarmic.github.io/image-processor-js/" target="_blank">ImageProcessorJS</a></h1>
+            <h1><a href="https://biarmic.github.io/image-processor-js/" target="blank">ImageProcessorJS</a></h1>
             </br>
             <div class="border-bottom pb-5">
-                <a href="https://biarmic.github.io/image-processor-js/" target="_blank">
+                <a href="https://biarmic.github.io/image-processor-js/" target="blank">
                     <img src="./assets/images/projects/imageprocessorjs.gif" class="rounded-3 img-fluid project-image" alt="ImageProcessorJS">
                 </a>
             </div>
             </br>
-            <h1><a href="https://biarmic.github.io/solitaire-js/" target="_blank">SolitaireJS</a></h1>
+            <h1><a href="https://biarmic.github.io/solitaire-js/" target="blank">SolitaireJS</a></h1>
             </br>
             <div class="border-bottom pb-5">
-                <a href="https://biarmic.github.io/solitaire-js/" target="_blank">
+                <a href="https://biarmic.github.io/solitaire-js/" target="blank">
                     <img src="./assets/images/projects/solitairejs.gif" class="rounded-3 img-fluid project-image" alt="SolitaireJS">
                 </a>
             </div>
             </br>
-            <h1><a href="https://biarmic.github.io/outrun-js/" target="_blank">OutRunJS</a></h1>
+            <h1><a href="https://biarmic.github.io/outrun-js/" target="blank">OutRunJS</a></h1>
             </br>
             <div>
-                <a href="https://biarmic.github.io/outrun-js/" target="_blank">
+                <a href="https://biarmic.github.io/outrun-js/" target="blank">
                     <img src="./assets/images/projects/outrunjs.gif" class="rounded-3 img-fluid project-image" alt="OutRunJS">
                 </a>
             </div>
