--- a/publications.html
+++ b/publications.html
@@ -22,7 +22,7 @@
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                     <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     <a class="nav-link" href="./aboutme.html">About Me</a>
-                    <a class="nav-link" href="./assets/Eren-Dogan-Resume.pdf" target="_blank">Resume</a>
+                    <a class="nav-link" href="./assets/Eren-Dogan-Resume.pdf" target="blank">Resume</a>
                     <a class="nav-link" href="./projects.html">Projects</a>
                     <a class="nav-link active" href="./publications.html">Publications</a>
                     <a class="nav-link" href="./contact.html">Contact</a>
@@ -32,7 +32,7 @@
 
         <main class="px-3 mb-auto">
             <div>
-                <a href="https://arxiv.org/abs/2103.15972" target="_blank">
+                <a href="https://arxiv.org/abs/2103.15972" target="blank">
                     <img src="./assets/images/publications/pytorch-compression.png" class="rounded-3 img-fluid project-image" alt="PyTorchCompression">
                 </a>
             </div>
