--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                     <a class="nav-link" href="./index.html">Home</a>
                     <a class="nav-link active" aria-current="page" href="./aboutme.html">About Me</a>
-                    <a class="nav-link" href="./assets/Eren-Dogan-Resume.pdf" target="_blank">Resume</a>
+                    <a class="nav-link" href="./assets/Eren-Dogan-Resume.pdf" target="blank">Resume</a>
                     <a class="nav-link" href="./projects.html">Projects</a>
                     <a class="nav-link" href="./publications.html">Publications</a>
                     <a class="nav-link" href="./contact.html">Contact</a>
@@ -47,7 +47,7 @@
                     <p class="lead">🎮 <u>Nickname:</u></p>
                 </div>
                 <div class="col-auto">
-                    <p class="lead"><a href="https://ebird.org/species/lanfal1" target="_blank">biarmic</a></p>
+                    <p class="lead"><a href="https://ebird.org/species/lanfal1" target="blank">biarmic</a></p>
                 </div>
             </div>
             </br>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="col-auto">
                     <p class="lead"><a href="https://www.google.com/maps/place/Nordenham+Germany"
-                            target="_blank">Nordenham, Germany</a></p>
+                            target="blank">Nordenham, Germany</a></p>
                 </div>
             </div>
             </br>
@@ -85,7 +85,7 @@
                     <p class="lead">&nbsp;📍&nbsp;&nbsp;<u>Location:</u></p>
                 </div>
                 <div class="col-auto">
-                    <p class="lead"><a href="https://www.google.com/maps/place/Mersin+Turkey" target="_blank">Mersin,
+                    <p class="lead"><a href="https://www.google.com/maps/place/Mersin+Turkey" target="blank">Mersin,
                             Turkey</a></p>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                     <p class="lead">📧 <u>E-mail:</u></p>
                 </div>
                 <div class="col-auto">
-                    <p class="lead"><a href="mailto: eren.dogan@ozu.edu.tr" target="_blank">eren.dogan@ozu.edu.tr</a>
+                    <p class="lead"><a href="mailto: eren.dogan@ozu.edu.tr" target="blank">eren.dogan@ozu.edu.tr</a>
                     </p>
                 </div>
             </div>
@@ -104,7 +104,7 @@
             </br>
             <div class="row">
                 <div class="col-auto me-auto">
-                    <p class="lead">🎓 <u><a href="https://www.ozyegin.edu.tr/en" target="_blank">Özyeğin
+                    <p class="lead">🎓 <u><a href="https://www.ozyegin.edu.tr/en" target="blank">Özyeğin
                                 University</a></u></p>
                 </div>
                 <div class="col-auto">
@@ -130,7 +130,7 @@
             </br>
             <div class="row">
                 <div class="col-auto me-auto">
-                    <p class="lead">🏫 <u><a href="http://ial.meb.k12.tr/" target="_blank">İçel Anatolian High
+                    <p class="lead">🏫 <u><a href="http://ial.meb.k12.tr/" target="blank">İçel Anatolian High
                                 School</a></u></p>
                 </div>
                 <div class="col-auto">
