--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                     <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     <a class="nav-link" href="./aboutme.html">About Me</a>
-                    <a class="nav-link" href="./assets/Eren-Dogan-Resume.pdf" target="_blank">Resume</a>
+                    <a class="nav-link" href="./assets/Eren-Dogan-Resume.pdf" target="blank">Resume</a>
                     <a class="nav-link" href="./projects.html">Projects</a>
                     <a class="nav-link" href="./publications.html">Publications</a>
                     <a class="nav-link" href="./contact.html">Contact</a>
