--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Eren Dogan</title>
     <link rel="icon" href="./assets/icons/icon.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+        crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <link href="cover.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+        integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+        crossorigin="anonymous"></script>
     <script src="scripts/index.js"></script>
+    <script src="scripts/contact.js"></script>
 </head>
 
-<body class="d-flex h-100 text-center text-white">
+<body class="d-flex h-100 text-center text-white" onload="init()">
 
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
@@ -53,8 +62,8 @@
                     </a>
                 </div>
                 <div class="col">
-                    <a href="./publickey.html">
-                        <img src="./assets/icons/lock.svg" alt="Encrypt" class="social-link">
+                    <a onclick="copyToClipboard()" >
+                        <img src="./assets/icons/lock.svg" alt="Encrypt" id="key" class="social-link" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Copy to clipboard">
                     </a>
                 </div>
             </div>
