Reorganize the main page

--- a/index.html
+++ b/index.html
@@ -33,14 +33,12 @@
         </header>
 
         <main class="px-3 mb-auto">
-            <h1>👋🏻</h1>
+            <h1 class="display-3">👋🏻</h1>
             </br>
             </br>
-            <h1 id="greetings"></h1>
+            <h1 class="display-3" id="greetings"></h1>
             </br>
             </br>
-            <p class="lead">My name is Eren</p>
-            <p class="lead">I'm a junior CS student</p>
         </main>
     </div>
 
