Dark mode for publication images

--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,7 @@
         <main class="px-3 mb-auto">
             <div>
                 <a href="https://arxiv.org/abs/2103.15972" target="blank">
-                    <img src="./assets/images/publications/pytorch-compression.png" class="rounded-3 img-fluid project-image" alt="PyTorchCompression">
+                    <img src="./assets/images/publications/pytorch-compression.png" class="rounded-3 img-fluid pub-image" alt="PyTorchCompression">
                 </a>
             </div>
             </br>
