--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         <main class="px-3 mb-auto">
             <div class="row">
                 <div class="col">
-                    <a href="https://github.com/biarmic" target="blank">
+                    <a href="https://github.com/erendo" target="blank">
                         <img src="./assets/icons/github.svg" alt="GitHub" class="social-link">
                     </a>
                 </div>
