--- a/projects.html
+++ b/projects.html
@@ -32,34 +32,34 @@
         </header>
 
         <main class="px-3 mb-auto">
-            <h1><a href="https://biarmic.github.io/pathfinder-js/" target="blank">PathfinderJS</a></h1>
+            <h1><a href="https://erendo.github.io/pathfinder-js/" target="blank">PathfinderJS</a></h1>
             </br>
             <div class="border-bottom pb-5">
-                <a href="https://biarmic.github.io/pathfinder-js/" target="blank">
+                <a href="https://erendo.github.io/pathfinder-js/" target="blank">
                     <img src="./assets/images/projects/pathfinderjs.gif" class="rounded-3 img-fluid project-image" alt="PathfinderJS">
                 </a>
             </div>
             </br>
-            <h1><a href="https://biarmic.github.io/image-processor-js/" target="blank">ImageProcessorJS</a></h1>
+            <h1><a href="https://erendo.github.io/image-processor-js/" target="blank">ImageProcessorJS</a></h1>
             </br>
             <div class="border-bottom pb-5">
-                <a href="https://biarmic.github.io/image-processor-js/" target="blank">
+                <a href="https://erendo.github.io/image-processor-js/" target="blank">
                     <img src="./assets/images/projects/imageprocessorjs.gif" class="rounded-3 img-fluid project-image" alt="ImageProcessorJS">
                 </a>
             </div>
             </br>
-            <h1><a href="https://biarmic.github.io/solitaire-js/" target="blank">SolitaireJS</a></h1>
+            <h1><a href="https://erendo.github.io/solitaire-js/" target="blank">SolitaireJS</a></h1>
             </br>
             <div class="border-bottom pb-5">
-                <a href="https://biarmic.github.io/solitaire-js/" target="blank">
+                <a href="https://erendo.github.io/solitaire-js/" target="blank">
                     <img src="./assets/images/projects/solitairejs.gif" class="rounded-3 img-fluid project-image" alt="SolitaireJS">
                 </a>
             </div>
             </br>
-            <h1><a href="https://biarmic.github.io/outrun-js/" target="blank">OutRunJS</a></h1>
+            <h1><a href="https://erendo.github.io/outrun-js/" target="blank">OutRunJS</a></h1>
             </br>
             <div>
-                <a href="https://biarmic.github.io/outrun-js/" target="blank">
+                <a href="https://erendo.github.io/outrun-js/" target="blank">
                     <img src="./assets/images/projects/outrunjs.gif" class="rounded-3 img-fluid project-image" alt="OutRunJS">
                 </a>
             </div>
