--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <a href="https://scholar.google.com/citations?user=w3pdIrkAAAAJ&hl=en">Google Scholar</a>
                 <a href="https://www.linkedin.com/in/erendogann/">LinkedIn</a>
                 <a href="https://github.com/erendo">GitHub</a>
+                <a href="key.txt">PGP Key</a>
             </div>
 
             <hr>
