Fix link margins

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 
             <hr>
 
-            <div class="d-flex justify-content-around">
-                <a href="assets/Eren-Dogan-Resume.pdf">Resume</a>
-                <a href="https://scholar.google.com/citations?user=w3pdIrkAAAAJ&hl=en">Google Scholar</a>
-                <a href="https://www.linkedin.com/in/erendogann/">LinkedIn</a>
-                <a href="https://github.com/erendo">GitHub</a>
-                <a href="key.txt">PGP Key</a>
+            <div class="d-flex justify-content-around flex-wrap">
+                <a class="mx-2" href="assets/Eren-Dogan-Resume.pdf">Resume</a>
+                <a class="mx-2" href="https://scholar.google.com/citations?user=w3pdIrkAAAAJ&hl=en">Google Scholar</a>
+                <a class="mx-2" href="https://www.linkedin.com/in/erendogann/">LinkedIn</a>
+                <a class="mx-2" href="https://github.com/erendo">GitHub</a>
+                <a class="mx-2" href="key.txt">PGP Key</a>
             </div>
 
             <hr>
