Fix GitHub links

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     on Embedded Systems Design (VLSID), 2022</i>
                 <br>
                 <a href="https://arxiv.org/abs/2103.15972">arXiv</a>
-                <a href="https://github.com/VLSIDA/OpenCache">repo</a>
+                <a href="https://github.com/erendo/pytorch-compression-for-mcu">repo</a>
             </p>
             <p>
                 <b>OpenCache: An Open-Source OpenRAM Based Cache Generator</b>
@@ -80,6 +80,7 @@
                     Computer-Aided Design (ICCAD), 2021</i>
                 <br>
                 <a href="https://woset-workshop.github.io/PDFs/2021/a21.pdf">PDF</a>
+                <a href="https://github.com/VLSIDA/OpenCache">repo</a>
             </p>
 
             <hr>
