Add Turkish page

--- a/tr/index.html
+++ b/tr/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="tr" class="h-100">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Eren Dogan</title>
-    <link rel="icon" href="./assets/icon.png">
+    <title>Eren Doğan</title>
+    <link rel="icon" href="../assets/icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet">
-    <script type="module" src="utils.js"></script>
+    <link href="../style.css" rel="stylesheet">
+    <script type="module" src="../utils.js"></script>
 </head>
 
 <body>
@@ -20,13 +20,13 @@
                 <div class="col-8">
 
                     <!-- TITLE -->
-                    <h1 style="font-size: 60px;">Eren Dogan</h1>
+                    <h1 style="font-size: 60px;">Eren Doğan</h1>
                     <p>
-                        Undergraduate Student
+                        Lisans Öğrencisi
                         <br>
-                        Computer Science
+                        Bilgisayar Mühendisliği
                         <br>
-                        <a href="https://www.ozyegin.edu.tr/en">Ozyegin University</a>
+                        <a href="https://www.ozyegin.edu.tr/tr">Özyeğin Üniversitesi</a>
                         <br>
                         <a href="mailto:eren.dogan@ozu.edu.tr">eren.dogan@ozu.edu.tr</a>
                     </p>
@@ -43,7 +43,7 @@
 
             <div class="d-flex justify-content-around flex-wrap">
                 <a class="mx-2" href="assets/Eren-Dogan-Resume.pdf">Resume</a>
-                <a class="mx-2" href="https://scholar.google.com/citations?user=w3pdIrkAAAAJ&hl=en">Google Scholar</a>
+                <a class="mx-2" href="https://scholar.google.com/citations?user=w3pdIrkAAAAJ&hl=tr">Google Akademik</a>
                 <a class="mx-2" href="https://www.linkedin.com/in/erendogann/">LinkedIn</a>
                 <a class="mx-2" href="https://github.com/erendo">GitHub</a>
                 <a class="mx-2" href="key.txt">PGP Key</a>
@@ -52,14 +52,14 @@
             <hr>
 
             <p>
-                I am a senior Computer Science student at Ozyegin University in Turkey. I
-                am interested in computer architecture and other related areas.
+                Özyeğin Üniversitesi'nde Bilgisayar Mühendisliği son sınıf öğrencisiyim.
+                Bilgisayar mimarisiyle ve diğer alakalı alanlarla ilgileniyorum.
             </p>
 
             <hr>
 
             <!-- PUBLICATIONS -->
-            <h2>Publications</h2>
+            <h2>Yayınlar</h2>
             <p>
                 <b>An Automated Flow for PyTorch Model Compression and Deployment on Microcontrollers</b>
                 <br>
@@ -86,11 +86,11 @@
             <hr>
 
             <!-- HOBBY PROJECTS -->
-            <h2>Hobby Projects</h2>
+            <h2>Hobi Projeleri</h2>
             <p>
                 <b>Image Processor JS</b>
                 <br>
-                I implemented a simulator with some image processing algorithms in JavaScript.
+                JavaScript dilinde, bazı görüntü işleme algoritmalarını içeren bir simülatör yazdım.
                 <br>
                 <a href="https://erendo.github.io/image-processor-js/">demo</a>
                 <a href="https://github.com/erendo/image-processor-js">repo</a>
@@ -98,7 +98,7 @@
             <p>
                 <b>Pathfinder JS</b>
                 <br>
-                I implemented a simulator with some pathfinding algorithms in JavaScript.
+                JavaScript dilinde, bazı rota bulma algoritmalarını içeren bir simülatör yazdım.
                 <br>
                 <a href="https://erendo.github.io/pathfinder-js/">demo</a>
                 <a href="https://github.com/erendo/pathfinder-js">repo</a>
@@ -106,9 +106,8 @@
             <p>
                 <b>OutRun JS</b>
                 <br>
-                I designed a simulator with pseudo-3D game engine for the arcade game
-                <a href="https://en.wikipedia.org/wiki/Out_Run#:~:text=Sega%20OutRun,motion%20simulator%20deluxe%20arcade%20cabinet.">Out Run</a>
-                in JavaScript.
+                JavaScript dilinde, <a href="https://tr.wikipedia.org/wiki/Out_Run">Out Run</a> oyunu için,
+                yalancı-3B oyun motoru içeren bir simülatör yazdım.
                 <br>
                 <a href="https://erendo.github.io/outrun-js/">demo</a>
                 <a href="https://github.com/erendo/outrun-js">repo</a>
@@ -116,7 +115,7 @@
             <p>
                 <b>Simple Games</b>
                 <br>
-                I wrote many simple games in Java during my freshman year at Ozyegin University.
+                Özyeğin Üniversitesi'ndeki ilk yılımda Java ile pek çok basit oyun yazdım.
                 <br>
                 <a href="https://github.com/erendo/chess-java">chess</a>
                 <a href="https://github.com/erendo/klondike-java">klondike</a>
@@ -131,20 +130,20 @@
             <hr>
 
             <!-- PERSONAL -->
-            <h2>Personal</h2>
+            <h2>Kişisel</h2>
             <p>
-                I am a German-Turk (<a href="https://en.wikipedia.org/wiki/Turks_in_Germany">Deutschtürke</a>),
-                born in <a href="https://en.wikipedia.org/wiki/Nordenham">Nordenham</a> and
-                raised in <a href="https://en.wikipedia.org/wiki/Mersin">Mersin</a>.
+                Gurbetçi bir aileden geliyorum. <a href="https://tr.wikipedia.org/wiki/Nordenham">Nordenham</a>'da
+                doğdum, <a href="https://tr.wikipedia.org/wiki/Mersin">Mersin</a>'de büyüdüm.
             </p>
             <p>
-                I enjoy automating things; therefore, I usually <span title="find me everywhere as biarmic">play</span> simulation/automation games.
-                That's probably why I am interested in electronic design automation as well.
+                Bir şeyler otomasyona koymayı severim. Bu sebeple de genelde simülasyon/otomasyon
+                oyunları <span title="biarmic mahlasını kullanıyorum">oynarım</span>. Elektronik
+                tasarım otomasyonu ile ilgilenmemin sebebi de büyük ihtimalle bu.
             </p>
 
             <hr>
 
-            <p name="en" id="update" style="text-align: center; color: rgb(114, 114, 114);"></p>
+            <p name="tr" id="update" style="text-align: center; color: rgb(114, 114, 114);"></p>
 
         </div>
     </div>
