Revert last changes

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
             <hr>
 
-            <p name="en" id="update" style="text-align: center; color: rgb(114, 114, 114);"></p>
+            <p id="update" style="text-align: center; color: rgb(114, 114, 114);"></p>
 
         </div>
     </div>
