Change GitHub username

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a class="mx-2" href="assets/Eren-Dogan-Resume.pdf">Resume</a>
                 <a class="mx-2" href="https://scholar.google.com/citations?user=w3pdIrkAAAAJ&hl=en">Google Scholar</a>
                 <a class="mx-2" href="https://www.linkedin.com/in/erendogann/">LinkedIn</a>
-                <a class="mx-2" href="https://github.com/erendo">GitHub</a>
+                <a class="mx-2" href="https://github.com/erendn">GitHub</a>
                 <a class="mx-2" href="key.txt">PGP Key</a>
             </div>
 
@@ -69,7 +69,7 @@
                     on Embedded Systems Design (VLSID), 2022</i>
                 <br>
                 <a href="https://arxiv.org/abs/2103.15972">arXiv</a>
-                <a href="https://github.com/erendo/pytorch-compression-for-mcu">repo</a>
+                <a href="https://github.com/erendn/pytorch-compression-for-mcu">repo</a>
             </p>
             <p>
                 <b>OpenCache: An Open-Source OpenRAM Based Cache Generator</b>
@@ -92,16 +92,16 @@
                 <br>
                 I implemented a simulator with some image processing algorithms in JavaScript.
                 <br>
-                <a href="https://erendo.github.io/image-processor-js/">demo</a>
-                <a href="https://github.com/erendo/image-processor-js">repo</a>
+                <a href="https://erendn.github.io/image-processor-js/">demo</a>
+                <a href="https://github.com/erendn/image-processor-js">repo</a>
             </p>
             <p>
                 <b>Pathfinder JS</b>
                 <br>
                 I implemented a simulator with some pathfinding algorithms in JavaScript.
                 <br>
-                <a href="https://erendo.github.io/pathfinder-js/">demo</a>
-                <a href="https://github.com/erendo/pathfinder-js">repo</a>
+                <a href="https://erendn.github.io/pathfinder-js/">demo</a>
+                <a href="https://github.com/erendn/pathfinder-js">repo</a>
             </p>
             <p>
                 <b>OutRun JS</b>
@@ -110,22 +110,22 @@
                 <a href="https://en.wikipedia.org/wiki/Out_Run#:~:text=Sega%20OutRun,motion%20simulator%20deluxe%20arcade%20cabinet.">Out Run</a>
                 in JavaScript.
                 <br>
-                <a href="https://erendo.github.io/outrun-js/">demo</a>
-                <a href="https://github.com/erendo/outrun-js">repo</a>
+                <a href="https://erendn.github.io/outrun-js/">demo</a>
+                <a href="https://github.com/erendn/outrun-js">repo</a>
             </p>
             <p>
                 <b>Simple Games</b>
                 <br>
                 I wrote many simple games in Java during my freshman year at Ozyegin University.
                 <br>
-                <a href="https://github.com/erendo/chess-java">chess</a>
-                <a href="https://github.com/erendo/klondike-java">klondike</a>
-                <a href="https://github.com/erendo/tetris-java">tetris</a>
-                <a href="https://github.com/erendo/snake-java">snake</a>
-                <a href="https://github.com/erendo/minesweeper-java">minesweeper</a>
-                <a href="https://github.com/erendo/pacman-java">pacman</a>
-                <a href="https://github.com/erendo/uno-java">uno</a>
-                <a href="https://github.com/erendo/monopoly-java">monopoly</a>
+                <a href="https://github.com/erendn/chess-java">chess</a>
+                <a href="https://github.com/erendn/klondike-java">klondike</a>
+                <a href="https://github.com/erendn/tetris-java">tetris</a>
+                <a href="https://github.com/erendn/snake-java">snake</a>
+                <a href="https://github.com/erendn/minesweeper-java">minesweeper</a>
+                <a href="https://github.com/erendn/pacman-java">pacman</a>
+                <a href="https://github.com/erendn/uno-java">uno</a>
+                <a href="https://github.com/erendn/monopoly-java">monopoly</a>
             </p>
 
             <hr>
