--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="d-flex justify-content-around flex-wrap">
                 <a class="mx-2" href="assets/Eren-Dogan-Resume.pdf">Resume</a>
                 <a class="mx-2" href="https://scholar.google.com/citations?user=w3pdIrkAAAAJ&hl=en">Google Scholar</a>
-                <a class="mx-2" href="https://www.linkedin.com/in/erendogann/">LinkedIn</a>
+                <a class="mx-2" href="https://www.linkedin.com/in/erendn/">LinkedIn</a>
                 <a class="mx-2" href="https://github.com/erendn">GitHub</a>
                 <a class="mx-2" href="key.txt">PGP Key</a>
             </div>
