Update with PhD

--- a/index.html
+++ b/index.html
@@ -17,24 +17,27 @@
     <div id="column-holder" class="d-flex flex-column py-2 mx-auto">
         <div id="content-container" class="p-2 pt-5">
             <div class="row">
-                <div class="col-8">
+                <div class="col-9">
 
                     <!-- TITLE -->
                     <h1 style="font-size: 60px;">Eren Dogan</h1>
                     <p>
-                        Undergraduate Student
+                        PhD Student
                         <br>
-                        Computer Science
+                        <a href="https://engineering.ucsc.edu/departments/computer-science-and-engineering">Computer Science & Engineering</a>
                         <br>
-                        <a href="https://www.ozyegin.edu.tr/en">Ozyegin University</a>
+                        <a href="https://www.ucsc.edu">University of California, Santa Cruz</a>
                         <br>
-                        <a href="mailto:eren.dogan@ozu.edu.tr">eren.dogan@ozu.edu.tr</a>
+                        <a href="mailto:erdogan@ucsc.edu">erdogan@ucsc.edu</a>
                     </p>
 
                 </div>
 
-                <div class="col-4">
-                    <!-- Add photo here -->
+                <div class="col-3">
+                    <!-- PHOTO -->
+                    <div class="profile">
+                        <img src="assets/profile.jpg">
+                    </div>
                 </div>
 
             </div>
@@ -52,8 +55,8 @@
             <hr>
 
             <p>
-                I am a senior Computer Science student at Ozyegin University in Turkey. I
-                am interested in computer architecture and other related areas.
+                I am a first-year PhD student at UC Santa Cruz.
+                I am interested in computer architecture and other related areas.
             </p>
 
             <hr>
@@ -136,10 +139,6 @@
                 I am a German-Turk (<a href="https://en.wikipedia.org/wiki/Turks_in_Germany">Deutschtürke</a>),
                 born in <a href="https://en.wikipedia.org/wiki/Nordenham">Nordenham</a> and
                 raised in <a href="https://en.wikipedia.org/wiki/Mersin">Mersin</a>.
-            </p>
-            <p>
-                I enjoy automating things; therefore, I usually <span title="find me everywhere as biarmic">play</span> simulation/automation games.
-                That's probably why I am interested in electronic design automation as well.
             </p>
 
             <hr>
