--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div id="column-holder" class="d-flex flex-column py-2 mx-auto">
         <div id="content-container" class="p-2 pt-5">
             <div class="row">
-                <div class="col-9">
 
+                <div class="col-9">
                     <!-- TITLE -->
                     <h1 style="font-size: 60px;">Eren Dogan</h1>
                     <p>
@@ -35,7 +35,7 @@
 
                 <div class="col-3">
                     <!-- PHOTO -->
-                    <div class="profile">
+                    <div id="profile" class="float-end">
                         <img src="assets/profile.jpg">
                     </div>
                 </div>
