--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google" content="notranslate">
     <title>Eren Dogan</title>
     <link rel="icon" href="./assets/icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,6 +14,10 @@
 </head>
 
 <body>
+
+    <div id="background-container" class="position-absolute" style="width: 100%; z-index: -5; overflow: hidden;">
+        <div id="background-text" class="h1" style="color: rgb(11, 18, 10);"></div>
+    </div>
 
     <div id="column-holder" class="d-flex flex-column py-2 mx-auto">
         <div id="content-container" class="p-2 pt-5">
